# 03MIAR-Algoritmos-de-Optimizacion-2025

./: .gitignore  .rcloneignore  EjercicioSesion1.ipynb  Pipfile  README.md  SecuenciaDeFibonacci.ipynb  animation.py  index.html  pyproject.toml  requirements.txt  update_gdrive.sh
AG1/: Algoritmos AG1(Divide y vencerás,Voraz,Backtracking).html  Algoritmos AG1(Divide y vencerás,Voraz,Backtracking).ipynb
AG2/: Algoritmos_AG2.html  Algoritmos_AG2.ipynb  AsignacionDeTareas.ipynb
AG3/: AG3_Algoritmos(Colonia_de_Hormigas).ipynb  Algoritmos_AG3.ipynb  CarlosJavierBravo_Algoritmos_AG3.html  CarlosJavierBravo_Algoritmos_AG3.ipynb  CarlosJavierBravo_Algoritmos_AG3_Colonia_de_Hormigas.html  CarlosJavierBravo_Algoritmos_AG3_Colonia_de_Hormigas.ipynb
AG4/: Algoritmo_Genetico_para_el_TSP.html  Algoritmo_Genetico_para_el_TSP.ipynb
AportesForo/: EjercicioSesion1.html  EjercicioSesion1.ipynb  SecuenciaDeFibonacci.html  SecuenciaDeFibonacci.ipynb
MIAR03/: beauty_printer.py  chess_board.py  watermark.py
TrabajoPractico/: CarlosJavierBravo_ConfiguracionTribunales.html  CarlosJavierBravo_ConfiguracionTribunales.ipynb  CarlosJavierBravo_Trabajo_Práctico_Algoritmos.html  CarlosJavierBravo_Trabajo_Práctico_Algoritmos.ipynb  SesionDeDoblaje_SA.ipynb  SesionDeDoblaje_VNS.ipynb  soluciones_unicas
